Add AI-powered evaluation pipeline with Gemini integration
- Add extraction services (PDF, PPTX, DOCX, video, image support)
- Add classification services (21 themes, 8 industries)
- Add evaluation services (rubric-based scoring)
- Add pipeline orchestration (batch processing)
- Add database manager (connection pool integration)
- Add 3 API endpoints (/api/evaluation/start, /status, /ideas/{id}/scores)
- Add frontend Evaluation tab with real-time progress
- Add database migrations (15 new columns + indexes)
- Update submission service to use hackathon_ideas table
- Update requirements.txt with 8 new packages

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,26 @@ node_modules/
 # Temporary files
 *.tmp
 *.bak
+
+# Evaluation Pipeline - Helper/Debug Scripts (don't push)
+python_backend/test_pipeline.py
+python_backend/check_status.py
+python_backend/debug_query.py
+python_backend/reset_classification.py
+python_backend/setup_database.py
+setup_database.bat
+
+# Evaluation Pipeline - Documentation (optional, don't push)
+EVALUATION_PIPELINE_GUIDE.md
+EVALUATION_PIPELINE_COMPLETE.md
+QUICK_START.md
+
+# Spec files (optional, don't push)
+.kiro/specs/evaluation-pipeline-integration/CRITICAL_NEXT_STEPS.md
+.kiro/specs/evaluation-pipeline-integration/COMPLETION_SUMMARY.md
+.kiro/specs/evaluation-pipeline-integration/FINAL_STATUS.md
+.kiro/specs/evaluation-pipeline-integration/IMPLEMENTATION_STATUS.md
+.kiro/specs/evaluation-pipeline-integration/FINAL_COMPLETION.md
+
+# Data directory (uploaded files, don't push)
+data/additional_files/
