--- a/python_backend/requirements.txt
+++ b/python_backend/requirements.txt
@@ -13,3 +13,13 @@ httpx>=0.25.0
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
 litellm>=1.40.0
+
+# Evaluation Pipeline Dependencies
+google-generativeai>=0.3.0
+python-pptx>=0.6.21
+python-docx>=1.0.0
+Pillow>=10.0.0
+opencv-python>=4.8.0
+tqdm>=4.66.0
+tenacity>=8.2.0
+reportlab>=4.0.0
